First build for all platforms

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <title>Electron Screen Recorder</title>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
     <meta charset="utf-8" />
     <link rel="stylesheet" href="screen-recorder.css" />
     <link rel="stylesheet" href="assets/themify-icons.css" />
-    <link rel="stylesheet" href="assets/fonts/Bnazanin/AtFontFace.css" />
-    <link
+    <!-- <link rel="stylesheet" href="assets/fonts/Bnazanin/AtFontFace.css" /> -->
+    <!-- <link
       rel="stylesheet"
       href="assets//bootstrap-4.4.1-dist/css/bootstrap.min.css"
-    />
+    /> -->
   </head>
 
   <body dir="rtl">
@@ -240,14 +241,14 @@
       <!-- ti-layout-grid3-alt -->
     </div>
   
-    <script src="assets/bootstrap-4.4.1-dist/js/jquery.js"></script>
-    <script
+    <!-- <script src="assets/bootstrap-4.4.1-dist/js/jquery.js"></script> -->
+    <!-- <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
-    ></script>
-    <script src="assets/bootstrap-4.4.1-dist/js/popper.js"></script>
-    <script src="assets/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+    ></script> -->
+    <!-- <script src="assets/bootstrap-4.4.1-dist/js/popper.js"></script>
+    <script src="assets/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script> -->
     <script src="app.js"></script>
   </body>
 </html>
