--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@ Please, enter patient ID.
                <div class="form-group row">
                   <div class="input-group mb-6 col-md-6">
                     <div class="input-group-prepend">
-                      <span class="input-group-text" id="basic-addon1">Surgeon</span>
+                      <span class="input-group-text" id="basic-addon1">Practitioner</span>
                     </div>
 
                     <input class="form-control" type="text" id="pNationalCode" placeholder="name" />
