illuim and tranverse colon regions

--- a/src/fileBaseImageSelection.html
+++ b/src/fileBaseImageSelection.html
@@ -87,12 +87,19 @@
                                 Descending Colon
                                 <!-- <span class="badge badge-primary badge-pill">0</span> -->
                             </li>
+                            <li id="TranverseColon"
+                                class="list-group-item d-flex justify-content-between align-items-center"
+                                onclick="setCurrentRegion('TranverseColon',this)">
+                                Tranverse Colon
+                                <!-- <span class="badge badge-primary badge-pill">0</span> -->
+                            </li>
                             <li id="splenticFlextureRegion"
                                 class="list-group-item d-flex justify-content-between align-items-center"
                                 onclick="setCurrentRegion('Splentic Flexture',this)">
                                 Splentic Flexture
                                 <!-- <span class="badge badge-primary badge-pill">0</span> -->
                             </li>
+                        
                             <li id="hepaticFlexureRegion"
                                 class="list-group-item d-flex justify-content-between align-items-center"
                                 onclick="setCurrentRegion('Hepatic Flexure',this)">
@@ -109,6 +116,12 @@
                                 class="list-group-item d-flex justify-content-between align-items-center"
                                 onclick="setCurrentRegion('Cecum',this)">
                                 Cecum
+                                <!-- <span class="badge badge-primary badge-pill">0</span> -->
+                            </li>
+                              <li id="ileum"
+                                class="list-group-item d-flex justify-content-between align-items-center"
+                                onclick="setCurrentRegion('Ileum',this)">
+                                Ileum
                                 <!-- <span class="badge badge-primary badge-pill">0</span> -->
                             </li>
                         </ul>
