upgrade to electron 19 and fix related issues

--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@ Please, enter patient ID.
 
         <div class="row">
           <div class="recording-area">
-              <video id="video"  class="video-js" width="1920" height="1080"></video>
+              <video id="video"  class="video-js" preload="auto"></video>
               <span class="badge badge-success number-of-images" id="numberOfImages">0</span>
           
           </div>
